--- a/.github/workflows/dayo2.yml
+++ b/.github/workflows/dayo2.yml
@@ -1,4 +1,4 @@
-name: dayo
+name: dayo_finest
 
 on: [ push, pull_request]
 
@@ -12,7 +12,7 @@ jobs:
           - name: Step two
             run: env | sort
       job2:
-          name: First job
+          name: Second job
           runs-on: windows-latest
           steps:
           - name: Step one
